--- a/BreadAndWineAndroid/app/src/main/res/values/colors.xml
+++ b/BreadAndWineAndroid/app/src/main/res/values/colors.xml
@@ -6,6 +6,7 @@
     <color name="primary_blue">#738CD1</color>
     <color name="accent_blue">#3366CC</color>
     <color name="background_light">#F8F9FA</color>
+    <color name="background_dark">#1A1A1A</color>
     <color name="text_primary">#2D2D2D</color>
     <color name="text_secondary">#6C757D</color>
 
